<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.mainscreen.MainScreenFragment">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvChats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/form"
        android:padding="16dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    <RelativeLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/vInputContainer"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tvIpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/my_ip"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/tvIpLabel"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/vInputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bConnect"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etTCP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/tcp_placeholder"
                android:inputType="text" />

            <EditText
                android:id="@+id/etUPD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/port"
                android:inputType="text"
                android:text="8080" />

        </LinearLayout>

        <Button
            android:id="@+id/bConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/connect" />

        <Button
            android:id="@+id/bConnectUdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vInputContainer"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/bConnect"
            android:background="@color/colorPrimary"
            android:padding="6dp"
            android:text="@string/connectUDP" />

        <ProgressBar
            android:id="@+id/pbWaiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>